[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "swarms-fork"
version = "0.1.0"
description = "A fork of kyegomez/swarms — scalable multi-agent orchestration framework"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "swarms-fork contributors" }
]
keywords = ["swarms", "agents", "llm", "multi-agent", "orchestration", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "tiktoken>=0.7.0",
    "tenacity>=8.3.0",
    "pydantic>=2.7.0",
    "loguru>=0.7.2",
    "rich>=13.7.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "termcolor>=2.4.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/your-org/swarms-fork"
Repository = "https://github.com/your-org/swarms-fork"
Issues = "https://github.com/your-org/swarms-fork/issues"
Changelog = "https://github.com/your-org/swarms-fork/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["swarms*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "B904"]

[tool.ruff.lint.isort]
known-first-party = ["swarms"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Removed --cov-report=xml since I'm only running tests locally and don't need the XML report
addopts = "--cov=swarms --cov-report=term-missing"

[tool.coverage.run]
source = ["swarms"]
omit = ["tests/*", "*/__init__.py"]
